updated the article view to display the time when the article was added

--- a/views/news_post.html
+++ b/views/news_post.html
@@ -34,7 +34,7 @@
           
             html += '<h1 class="text-center">'+data.title+'</h1><div class="text-center"><a href="#" class="btn btn-dark font-weight-bold mb-4">'
             +data.category+'</a></div><p class="fs-15 d-flex justify-content-center align-items-center m-0"><img src="data:image/png;base64,'+data.picture64+'" class="img-fluid mb-4" style="width: 980px; height: 500px;"/>'
-            +'<hr>30 May, 2021</p><p class="pt-4 pb-4">'+data.body+'</p>';
+            +'<hr>'+Date(data.added_at)+'</p><p class="pt-4 pb-4">'+data.body+'</p>';
           
             
           $("#article_view").html(html);
