updating admin html to prevent auto refresh

--- a/views/admin.html
+++ b/views/admin.html
@@ -185,7 +185,7 @@
       </div>
       <div class="item">
         <input type="file" id="myFile" name="Picture" accept="image/*" onchange="imageUploaded()" required>
-        <button type="submit" onclick="doAddArticle()"> ADD ARTICLE </button>
+        <button type="button" onclick="doAddArticle()"> ADD ARTICLE </button>
       </div>
     </fieldset>
     </form>
