--- a/views/admin.html
+++ b/views/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Travel Booking Form</title>
+    <title>ADMIN PANEL</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
@@ -210,7 +210,9 @@
       </div>
       <!-- /.table-responsive -->
   </div>
+
   <hr>
+
   <div class="testbox">
     <form id="image-form" role="form">
      <fieldset>
@@ -221,7 +223,7 @@
         <input id="article_id_image" type="text" name="id" placeholder="Article_id" required/>
         
       <div class="item">
-        <input type="file" id="myFile" name="Picture" accept="image/*" onchange="imageUploaded()" required>
+        <input type="file" id="myImage" name="Picture" accept="image/*" onchange="imageUploaded()" required>
         <button type="button" onclick="doAddImage()"> ADD IMAGE </button>
       </div>
     </fieldset>
@@ -319,7 +321,7 @@ function imageUploaded() {
             'article_id' : $('#article_id_image').val(),
             'picture64' : base64String
         }
-       console.log(base64String);
+       console.log(image_info);
         $.post("api/admin/images", image_info).done(function(data){
             console.log(data);
             //window.localStorage.setItem("token", data.token);
