fixed visual bug on tag text

--- a/views/news_post.html
+++ b/views/news_post.html
@@ -203,7 +203,7 @@
   
             var html = '';
             for(var i = 0; i < data.length; i++){
-              html +='<a class="btn btn-dark font-weight-bold mr-2 mb-2 mb-sm-0">'+data[i].tag_name+'</a>';
+              html +='<a style="color: white;" class="btn btn-dark font-weight-bold mr-2 mb-2 mb-sm-0">'+data[i].tag_name+'</a>';
             }
               
             $("#tags").html(html);
