--- a/views/admin.html
+++ b/views/admin.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>ADMIN PANEL</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
       html, body {
       min-height: 100%;
@@ -157,181 +151,14 @@
       }
       }
     </style>
-  </head>
+ 
   
     <div class="testbox">
-    <form id="article_form" role="form">
-     <fieldset>
-        
+      <a style = "margin:40px;" class = "btn btn-outline-primary" href="#admin-article">Add article</a>
       
-      <div class="item">
-        <p>Article Title</p>
-        <input id="title" type="text" name="name" placeholder="Title" required/>
-        <p>Article Category</p>
-        <div class="city-item">
-          <select id="cat" required>
-            <option selected value="NEWS" disabled>Category</option>
-            <option value="NEWS">NEWS</option>
-            <option value="WORLD">WORLD</option>
-            <option value="SPORTS">SPORTS</option>
-            <option value="BUSINESS">BUSINESS</option>
-          </select>
-        </div>
-      </div>
-     
-      <div class="item">
-        <p>Article Body</p>
-        <input id="body" type="text" name="name" placeholder="Body"  required/>
-      </div>
-      <div class="item">
-        <input type="file" id="myFile" name="Picture" accept="image/*" onchange="imageUploaded()" required>
-        <button type="button" onclick="doAddArticle()"> ADD ARTICLE </button>
-      </div>
-    </fieldset>
-    </form>
+      <a style = "margin:40px;" class = "btn btn-outline-primary" href="#admin-images">Add images to articles</a>
+      
+      <a style = "margin:40px;" class = "btn btn-outline-primary" href="#admin-tags">Add tags to articles</a>
     </div>
-    <hr>
     
-    <div class="row" style="margin: 50px; ">
-      <div class="table-responsive">
-          <table id="article_table" class="table responsive table-striped table-bordered table-hover">
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Title</th>
-                  <th>Category</th>
-                  <th>Added at</th>
-                  <th>DELETE</th>
-                </tr>
-              </thead>
-
-              <tbody></tbody>
-          </table>
-      </div>
-      <!-- /.table-responsive -->
-  </div>
-
-  <hr>
-
-  <div class="testbox">
-    <form id="image-form" role="form">
-     <fieldset>
-        
-      
-      <div class="item">
-        <p>Article ID</p>
-        <input id="article_id_image" type="text" name="id" placeholder="Article_id" required/>
-        
-      <div class="item">
-        <input type="file" id="myImage" name="Picture" accept="image/*" onchange="imageUploaded()" required>
-        <button type="button" onclick="doAddImage()"> ADD IMAGE </button>
-      </div>
-    </fieldset>
-    </form>
-    </div>
-    <hr>
-
-<script type="text/javascript">
-          get_all();
-
-
-        $("#article-form").on("submit", function(e){
-            e.preventDefault();
-           doAddArticle();
-        });
-
-        $("#image-form").on("submit", function(e){
-           doAddImage();
-        });
-        let base64String = "";
-  
-function imageUploaded() {
-    var file = document.querySelector(
-        'input[type=file]')['files'][0];
-  
-    var reader = new FileReader();
-    console.log("next");
-      
-    reader.onload = function () {
-        base64String = reader.result.replace("data:", "")
-            .replace(/^.+,/, "");
-  
-        imageBase64Stringsep = base64String;
-  
-        // alert(imageBase64Stringsep);
-        //console.log(base64String);
-    }
-      reader.readAsDataURL(file);
-}
-
-
-   function doAddArticle(){
-        var article_info = {
-            'title' : $('#title').val(),
-            'category' : $('#cat').val(),
-            'body' : $('#body').val(),
-            'picture64' : base64String,
-            'added_at' : Math.floor(Date.now() / 1000)
-        }
-        console.log(article_info.picture64);
-        $.post("api/admin/articles", article_info).done(function(data){
-            console.log(data);
-            //window.localStorage.setItem("token", data.token);
-            
-        }).fail(function(error){
-            alert(error.responseJSON.message);
-        });
     
-    }
-
-    function get_all(){
-      $.ajax({
-      url: 'api/admin/articles',
-      type: 'GET',
-      beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
-      success: function(data){
-          var html = '';
-          for(var i = 0; i < data.length; i++){
-            
-            html += '<tr><th>'+data[i].id+'</th><th>'+data[i].title+'</th><th>'+data[i].category+'</th><th>'+Date(data[i].added_at)+'</th><th><button class="btn btn-DANGER" onclick="articleDelete('+data[i].id+')">DELETE</button></th></tr>';
-              
-          }
-          
-          $("#article_table").html(html);
-          
-      }
-
-    });
-  }
-
-  function articleDelete(id){
-    $.ajax({
-      url: 'api/admin/articles/'+id,
-      type: 'DELETE',
-      beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
-      success: function(data){
-        window.location.reload();
-      }
-
-    });
-  }
-
-  function doAddImage(){
-    var image_info = {
-            'article_id' : $('#article_id_image').val(),
-            'picture64' : base64String
-        }
-       console.log(image_info);
-        $.post("api/admin/images", image_info).done(function(data){
-            console.log(data);
-            //window.localStorage.setItem("token", data.token);
-            
-        }).fail(function(error){
-            alert("Failed");
-        });
-  }
-
-  
-    
-
-</script>
