--- a/views/admin-tags.html
+++ b/views/admin-tags.html
@@ -165,10 +165,8 @@
     <div class="item">
       <p>Article ID</p>
       <input id="article_id_tag" type="text" name="id" placeholder="Article_id" required/>
-      
-    <div class="item">
-      <input type="text" id="myTag" name="Tag" required>
-      <button type="button" onclick="doAddTag()"> ADD IMAGE </button>
+      <input id="tag_input" type="text" id="myTag" name="Tag" required>
+      <button type="button" onclick="doAddTag()"> ADD TAG </button>
     </div>
   </fieldset>
   </form>
@@ -233,15 +231,15 @@
   function doAddTag(){
     var image_info = {
             'article_id' : $('#article_id_tag').val(),
-            'picture64' : base64String
+            'tag_name' : $('#tag_input').val()
         }
        console.log(base64String);
-        $.post("api/admin/images", image_info).done(function(data){
+        $.post("api/admin/tags", image_info).done(function(data){
             console.log(data);
             //window.localStorage.setItem("token", data.token);
-            
+            toastr.success('Succesfuly added a tag to article!');
         }).fail(function(error){
-            alert("Failed");
+          toastr.error('Adding tag to article failed!');
         });
   }
 
